# presidium

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/presidium-bridge/: Cargo.toml
crates/presidium-bridge/src/: lib.rs
crates/presidium-bridge/src/application/: mod.rs
crates/presidium-bridge/src/domain/: mod.rs
crates/presidium-bridge/src/infrastructure/: mod.rs
crates/presidium-core/: Cargo.toml
crates/presidium-core/src/: lib.rs
crates/presidium-core/src/application/: mod.rs
crates/presidium-core/src/application/ports/: crypto_port.rs  llm_port.rs  messaging_port.rs  mod.rs  moderation_port.rs  p2p_port.rs  storage_port.rs
crates/presidium-core/src/application/use_cases/: mod.rs  send_message.rs
crates/presidium-core/src/config/: mod.rs
crates/presidium-core/src/domain/: errors.rs  mod.rs
crates/presidium-core/src/domain/aggregates/: mod.rs
crates/presidium-core/src/domain/entities/: mod.rs
crates/presidium-core/src/domain/events/: mod.rs
crates/presidium-core/src/domain/value_objects/: mod.rs
crates/presidium-core/src/infrastructure/: mod.rs
crates/presidium-core/src/infrastructure/adapters/: mod.rs
crates/presidium-core/src/infrastructure/repositories/: mod.rs
crates/presidium-core/src/observability/: mod.rs
crates/presidium-core/tests/: architecture.rs  layers_dependencies.rs
crates/presidium-crypto/: Cargo.toml
crates/presidium-crypto/src/: lib.rs
crates/presidium-crypto/src/application/: mod.rs
crates/presidium-crypto/src/application/ports/: mod.rs
crates/presidium-crypto/src/application/use_cases/: mod.rs
crates/presidium-crypto/src/domain/: mod.rs
crates/presidium-crypto/src/domain/entities/: mod.rs
crates/presidium-crypto/src/domain/value_objects/: mod.rs
crates/presidium-crypto/src/infrastructure/: mod.rs
crates/presidium-crypto/src/infrastructure/adapters/: libsignal_crypto_adapter.rs  mod.rs
crates/presidium-llm/: Cargo.toml
crates/presidium-llm/src/: lib.rs
crates/presidium-llm/src/application/: mod.rs
crates/presidium-llm/src/application/ports/: mod.rs
crates/presidium-llm/src/application/use_cases/: mod.rs
crates/presidium-llm/src/domain/: mod.rs
crates/presidium-llm/src/domain/entities/: mod.rs
crates/presidium-llm/src/domain/value_objects/: mod.rs
crates/presidium-llm/src/infrastructure/: mod.rs
crates/presidium-llm/src/infrastructure/adapters/: candle_llm_adapter.rs  local_moderation_adapter.rs  mod.rs
crates/presidium-messaging/: Cargo.toml
crates/presidium-messaging/src/: lib.rs
crates/presidium-messaging/src/application/: mod.rs
crates/presidium-messaging/src/application/ports/: mod.rs
crates/presidium-messaging/src/application/use_cases/: mod.rs
crates/presidium-messaging/src/domain/: mod.rs
crates/presidium-messaging/src/domain/aggregates/: mod.rs
crates/presidium-messaging/src/domain/entities/: mod.rs
crates/presidium-messaging/src/domain/events/: mod.rs
crates/presidium-messaging/src/domain/value_objects/: mod.rs
crates/presidium-messaging/src/infrastructure/: mod.rs
crates/presidium-messaging/src/infrastructure/adapters/: mod.rs
crates/presidium-p2p/: Cargo.toml
crates/presidium-p2p/src/: lib.rs
crates/presidium-p2p/src/application/: mod.rs
crates/presidium-p2p/src/application/ports/: mod.rs
crates/presidium-p2p/src/application/use_cases/: mod.rs
crates/presidium-p2p/src/domain/: mod.rs
crates/presidium-p2p/src/domain/entities/: mod.rs
crates/presidium-p2p/src/domain/value_objects/: mod.rs
crates/presidium-p2p/src/infrastructure/: mod.rs
crates/presidium-p2p/src/infrastructure/adapters/: libp2p_network_adapter.rs  mod.rs
crates/presidium-storage/: Cargo.toml
crates/presidium-storage/src/: lib.rs
crates/presidium-storage/src/application/: mod.rs
crates/presidium-storage/src/application/ports/: mod.rs
crates/presidium-storage/src/application/use_cases/: mod.rs
crates/presidium-storage/src/domain/: mod.rs
crates/presidium-storage/src/domain/entities/: mod.rs
crates/presidium-storage/src/domain/value_objects/: mod.rs
crates/presidium-storage/src/infrastructure/: mod.rs
crates/presidium-storage/src/infrastructure/adapters/: mod.rs  redb_storage_adapter.rs
docs/: project-status.md
docs/adr/: 0001-use-workspace-hexagonal.md  0002-hexagonal-ports-definition.md
docs/arch/: overview.md
scripts/: ci-checks.sh  setup.sh
