[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "AGPL-3.0-or-later"
repository = "https://github.com/presidium-messenger/presidium"
description = "Decentralized E2EE P2P messenger of the next generation"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async traits
async-trait = "0.1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Hex / Base64
hex = "0.4"
base64 = "0.22"

# Bytes
bytes = "1"

# Testing
proptest = "1"
mockall = "0.13"

# Dev dependencies
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy for initial development
module_name_repetitions = "allow"
too_many_arguments = "allow"
must_use_candidate = "allow"
unused_async = "allow"
missing_const_for_fn = "allow"
struct_field_names = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
result_large_err = "allow"
derivable_impls = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
