[package]
name = "presidium-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "UniFFI bindings bridge for Presidium Messenger — Kotlin Multiplatform / Android integration"

[dependencies]
presidium-core = { path = "../presidium-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
