[package]
name = "presidium-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hexagonal core of Presidium Messenger — domain entities, value objects, aggregates, and application ports"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
figment = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
presidium-crypto = { path = "../presidium-crypto" }
presidium-p2p = { path = "../presidium-p2p" }
presidium-storage = { path = "../presidium-storage" }
presidium-llm = { path = "../presidium-llm" }

[lints]
workspace = true
