[package]
name = "presidium-messaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Messaging domain for Presidium Messenger — chat management, message routing, conversation logic"

[dependencies]
presidium-core = { path = "../presidium-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }

[lints]
workspace = true
